tests/ui/consts/const-block-const-bound.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-block-const-bound.rs:8:22
   |
LL | const fn f<T: ~const Destruct>(x: T) {}
   |                      ^^^^^^^^

error: aborting due to previous error

